--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                       <a class="splitting-text-anim-2 ar"  href="#">الصفحة الرئيسية</a>
                     </li>
                     <li class="menu-item">
-                      <a class="splitting-text-anim-2 ar"  href="#">مجمع يوتبيــا</a>
+                      <a class="splitting-text-anim-2 ar"  href="#">مجمع يوتوبيــا</a>
                     </li>
                     <li class="menu-item">
                       <a class="splitting-text-anim-2 ar"  href="#">مزايـــا يوتوبيــا</a>
